welcome.lessons.welcome.array.search.MaxValue.scala.error
maxValue:2: error: not found: value num
  var max:Int = num(0)
                ^